# inkbox-music

./: CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: main.yml
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src/components/: CoverArt.tsx  DesktopLyricsBridge.tsx  LyricView.tsx  OnlineLyricsModal.tsx  PlayerBar.tsx  SongInfoModal.tsx  SongList.tsx
src/pages/: AboutPage.tsx  DesktopLyricsWindow.tsx  NowPlayingPage.tsx  SettingsPage.tsx
src/services/: lyricService.ts  lyricsProviderService.ts  metadataService.ts
src/stores/: desktopLyricsStore.ts  libraryStore.ts  themeStore.ts
src/types/: music.ts
src/utils/: gradientCover.ts
