[package]
name = "inkbox-music"
version = "1.1.2"
description = "A local-first desktop music player"
authors = ["Inkbox"]
edition = "2021"

[lib]
name = "inkbox_music_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
